--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ django==2.0.6
 Pillow==4.2.1
 easy-thumbnails==2.5
 django-sslify==0.2.7
+django-crispy-forms==1.7.2
+django-allauth==0.32.0
 
 # Database Adapter and Management
 psycopg2==2.7.1
