--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,21 @@ temp
 
 # Environment
 .env
+
+# Javascript Related Files
+.DS_Store
+node_modules/
+newsfeed/frontend/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+newsfeed/frontend/test/unit/coverage
+newsfeed/frontend/test/e2e/reports
+selenium-debug.log
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
