--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ Pillow==4.2.1
 easy-thumbnails==2.5
 django-sslify==0.2.7
 django-crispy-forms==1.7.2
+# TODO: Need to update allauth installation
 django-allauth==0.32.0
+django-rest-auth==0.9.3
 djangorestframework==3.8.2
 
 # Database Adapter and Management
