--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "history": "^4.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "^2.1.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.1",
+    "serviceworker-webpack-plugin": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
