--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
 language: python
+python:
+  - "3.6"
+addons:
+  postgresql: "9.6"
+install:
+  - pip3 install --upgrade pip
+  - pip3 install -r requirements.txt
+script: pytest
