Preparing backend app for CI tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 addopts = -rsxX --tb=native
 testpaths = newsfeed
 python_files = test*.py
-DJANGO_SETTINGS_MODULE = newsfeed.settings.local
+DJANGO_SETTINGS_MODULE = newsfeed.settings.tests
