--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,12 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "history": "^4.7.2",
+    "jquery": "^3.3.1",
+    "moment": "^2.23.0",
+    "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-octicons": "^0.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
     "serviceworker-webpack-plugin": "^1.0.1"
