--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,9 @@ Pillow==4.2.1
 easy-thumbnails==2.5
 django-sslify==0.2.7
 django-crispy-forms==1.7.2
-# TODO: Need to update allauth installation
-django-allauth==0.37.0
-django-rest-auth==0.9.3
 djangorestframework==3.8.2
 django-cors-headers==2.4.0
+django-oauth-toolkit==1.0.0
 
 # Database Adapter and Management
 psycopg2==2.7.6
