--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ easy-thumbnails==2.5
 django-sslify==0.2.7
 django-crispy-forms==1.7.2
 djangorestframework==3.8.2
-django-cors-headers==2.4.0
+django-cors-middleware==1.3.0
 django-oauth-toolkit==1.0.0
 
 # Database Adapter and Management
