--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-crispy-forms==1.7.2
 djangorestframework==3.8.2
 django-cors-middleware==1.3.0
 django-oauth-toolkit==1.0.0
+PyJWT==1.7.1
 
 # Database Adapter and Management
 psycopg2==2.7.6
