Finishing up deployment settings

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -30,6 +30,20 @@ spec:
                   key: password
         ports:
         - containerPort: 8080
+      
+      - image: gcr.io/cloudsql-docker/gce-proxy:1.05
+        name: cloudsql-proxy
+        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
+                  "-instances=<replace with project>",
+                  "-credential_file=/secrets/cloudsql/credentials.json"]
+        volumeMounts:
+          - name: cloudsql-oauth-credentials
+            mountPath: /secrets/cloudsql
+            readOnly: true
+          - name: ssl-certs
+            mountPath: /etc/ssl/certs
+          - name: cloudsql
+            mountPath: /cloudsql
 
 # Service
 # This service provides an HTTP load balancing proxy over the newsfeed app
