--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       containers:
       - name: newsfeed-app
         image: gcr.io/<replace-with-projectid/newsfeed
+        # The Pull policy is useful for debugging, but should be turned off in
+        # production
         imagePullPolicy: Always
         env:
             # cloudsql secrets
@@ -31,6 +33,7 @@ spec:
         ports:
         - containerPort: 8080
       
+      # proxy container
       - image: gcr.io/cloudsql-docker/gce-proxy:1.05
         name: cloudsql-proxy
         command: ["/cloud_sql_proxy", "--dir=/cloudsql",
@@ -44,6 +47,16 @@ spec:
             mountPath: /etc/ssl/certs
           - name: cloudsql
             mountPath: /cloudsql
+      # volumes:
+      volumes:
+        - name: cloudsql-oath-credentials
+          secret:
+            secretName: cloudsql-oauth-credentials
+        - name: ssl-certs
+          hostPath:
+            path: /etc/ssl/certs
+        - name: cloudsql
+          emptyDir:
 
 # Service
 # This service provides an HTTP load balancing proxy over the newsfeed app
