--- a/frontend/deployment.yaml
+++ b/frontend/deployment.yaml
@@ -1,8 +1,26 @@
+# Deployment
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: frontend
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      containers:
+      - name: frontend
+      image: <name>
+      ports:
+      - containerPort: 3000
+
 # Service
 apiVersion: v1
 kind: Service
 metadata:
-  name: reactjs
+  name: frontend
   labels:
     app: app
 spec:
