--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,13 @@ easy-thumbnails==2.5
 django-sslify==0.2.7
 django-crispy-forms==1.7.2
 djangorestframework==3.8.2
-django-cors-middleware==1.3.0
+django-cors-headers==2.4.0
 django-oauth-toolkit==1.0.0
 PyJWT==1.7.1
 
 # Database Adapter and Management
+mysqlclient==1.4.1
 psycopg2==2.7.6
-dj-database-url==0.4.2
 
 # WSGI Handling
 gunicorn==19.7.1
