Cleanup of settings on move to Kubernetes

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,5 +1,5 @@
 # Deployment
-apiVersion: extensions/v1betav1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: newsfeed
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: newsfeed-app
-        image: gcr.io/newsfeed-232716/newsfeed
+        image: gcr.io/newsfeed-django/newsfeed
         # The Pull policy is useful for debugging, but should be turned off in
         # production
         imagePullPolicy: Always
@@ -37,7 +37,7 @@ spec:
       - image: gcr.io/cloudsql-docker/gce-proxy:1.05
         name: cloudsql-proxy
         command: ["/cloud_sql_proxy", "--dir=/cloudsql",
-                  "-instances=newsfeed-232716:us-central1:newsfeed-instance=tcp:5432",
+                  "-instances=newsfeed-django:us-central1:newsfeed-instance=tcp:5432",
                   "-credential_file=/secrets/cloudsql/credentials.json"]
         volumeMounts:
           - name: cloudsql-oauth-credentials
