--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django==2.1.7
 easy-thumbnails==2.5
 # django-sslify==0.2.7
 # django-crispy-forms==1.7.2
+django-hitcount==1.3.0
 djangorestframework==3.8.2
 django-cors-headers==2.4.0
 django-oauth-toolkit==1.0.0
