--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.1.3",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
