--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ easy-thumbnails==2.5
 django-hitcount==1.3.0
 
 # Rest related
-djangorestframework==3.8.2
+djangorestframework>=3.9.1
 django-cors-headers==2.4.0
 
 # Authentication and authorization
