--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^12.2.0",
+    "@ckeditor/ckeditor5-react": "^1.1.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "history": "^4.7.2",
