--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@ckeditor/ckeditor5-react": "^1.1.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "ckeditor4-react": "^1.0.0-beta",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
