--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,14 +16,17 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-octicons": "^0.2.0",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "serviceworker-webpack-plugin": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
