--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.7.0",
     "react-octicons": "^0.2.0",
     "react-redux": "^7.1.0",
+    "react-router": "^3.2.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
     "redux": "^4.0.1",
