--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^12.2.0",
     "@ckeditor/ckeditor5-react": "^1.1.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "ckeditor4-react": "^1.0.0-beta",
